--- a/public/index.html
+++ b/public/index.html
@@ -5,58 +5,218 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--    <link rel="stylesheet" href="css/all.min.css">-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <script src="https://kit.fontawesome.com/6b3dd5eb3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Lagos</title>
 </head>
 <body>    
 
-
+<!--NAV BAR-->
+<div class="container">
     <header class="page-header" id="myTopnav2">
-			<nav class="left-nav">
-			<ul>
-				<li><a href="#">Culture</a></li>
-				<li><a href="#">Events</a></li>
-				<li><a href="#">Food</a></li>
-			</ul>
-		</nav>
-		<div class="header-logo">
+        <nav class="left-nav">
+            <ul>
+                <li><a href="#">Culture</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Food</a></li>
+            </ul>
+        </nav>
+        <div class="header-logo">
             <!-- <img src="images/logo.png" alt="logo"> -->
             <a href="#">Lagos</a>
-		</div>
-		<nav class="right-nav">
-			<ul>
-				<li><a href="#">Traveling</a></li>
-				<li><a href="#">Fashion</a></li>
-				<li><a href="#">Other</a></li>
-            </ul>            
+        </div>
+        <nav class="right-nav">
+            <ul>
+                <li><a href="#">Traveling</a></li>
+                <li><a href="#">Fashion</a></li>
+                <li><a href="#">Other</a></li>
+            </ul>
         </nav>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
-          </a>
-              
+        </a>
+
     </header>
     <div class="nav-overlay" id="myTopnav">
         <ul>
-          <li><a href="#">Culture</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Food</a></li>
-          <li><a href="#">Traveling</a></li>
-          <li><a href="#">Fashion</a></li>
-          <li><a href="#">Other</a></li>
+            <li><a href="#">Culture</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Traveling</a></li>
+            <li><a href="#">Fashion</a></li>
+            <li><a href="#">Other</a></li>
         </ul>
-    </div>  
+    </div>
+</div>
+<!--End of NAVBAR-->
 
-<!-- <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div> -->
+<!-- Carousel -->
+<div class="container">
+    <div id="carouselExampleCaptions" class="carousel slide carousel_slider" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/images/Lagos11.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/images/Lagos22.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/images/Lagos33.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<!--End of slider-->
+<main class="page-main">
+    <div class="container wrapper">
+    <div class="row row-articles">
+        <div class="col-12 col-md-6 ">
+            <article>
+                <div class="article-left">
+                    <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
+                </div>
+                <div class="article-right">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <p class="meta">
+                        <span class="date">June 8 2019</span>
+                        <span class="author">by Thomas Smith</span>
+                        <span class="category">Culture</span>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
+                    </p>
+                    <p class="additional">
+                        <span class="views"><i class="fas fa-eye"></i> 266</span>
+                        <span class="comments"><i class="fas fa-comments"></i> 3</span>
+                        <button class="btn btn-primary btn-details">Details</button>
+                    </p>
 
+                </div>
+            </article>
+        </div>
+        <div class="col-12 col-md-6">
+            <article>
+                <div class="article-left">
+                    <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
+                </div>
+                <div class="article-right">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <p class="meta">
+                        <span class="date">June 8 2019</span>
+                        <span class="author">by Thomas Smith</span>
+                        <span class="category">Culture</span>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
+                    </p>
+                    <p class="additional">
+                        <span class="views"><i class="fas fa-eye"></i> 266</span>
+                        <span class="comments"><i class="fas fa-comments"></i> 3</span>
+                        <button class="btn btn-primary btn-details">Details</button>
+                    </p>
+
+                </div>
+            </article>
+        </div>
+
+    </div>
+        <div class="row row-articles">
+            <div class="col-12 col-md-6 ">
+                <article>
+                    <div class="article-left">
+                        <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
+                    </div>
+                    <div class="article-right">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p class="meta">
+                            <span class="date">June 8 2019</span>
+                            <span class="author">by Thomas Smith</span>
+                            <span class="category">Culture</span>
+                        </p>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
+                        </p>
+                        <p class="additional">
+                            <span class="views"><i class="fas fa-eye"></i> 266</span>
+                            <span class="comments"><i class="fas fa-comments"></i> 3</span>
+                            <button class="btn btn-primary btn-details">Details</button>
+                        </p>
+
+                    </div>
+                </article>
+            </div>
+            <div class="col-12 col-md-6">
+                <article>
+                    <div class="article-left">
+                        <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
+                    </div>
+                    <div class="article-right">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p class="meta">
+                            <span class="date">June 8 2019</span>
+                            <span class="author">by Thomas Smith</span>
+                            <span class="category">Culture</span>
+                        </p>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
+                        </p>
+                        <p class="additional">
+                            <span class="views"><i class="fas fa-eye"></i> 266</span>
+                            <span class="comments"><i class="fas fa-comments"></i> 3</span>
+                            <button class="btn btn-primary btn-details">Details</button>
+                        </p>
+
+                    </div>
+                </article>
+            </div>
+
+        </div>
+    </div>
+</main>
+
+<footer >
+    <div class="container page-footer">
+        <p>&#169; Lagos All right reserved</p>
+        <ul>
+            <li><a href="#">About Blog</a></li>
+            <li><a href="#">Admin Page</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+        <div class="socials">
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="google-plus"><i class="fab fa-google-plus-g"></i></a>
+        </div>
+    </div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
