--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="header-logo">
             <!-- <img src="images/logo.png" alt="logo"> -->
-            <a href="/">Lagos</a>
+            <a href="/">Admin Page</a>
         </div>
         <nav class="right-nav">
             <ul>
@@ -53,24 +53,57 @@
 
 <main>
     <div class="container">
-        <h1 >Admin Page</h1>
-        <hr>
         <div class="admin-tabs">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Slider</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contacts</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
+            <div class="tab-header">
+                <ul class="nav nav-pills mb-3 pills" id="pills-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Slider</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="tab-body">
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                        <button class="btn btn-primary">Add Post</button>
+                        <div class="articles">
+                            <article class="d-flex justify-content-between align-items-center">
+                                <div class="id w5">1</div>
+                                <div class="name w30">Lorem Ipsum</div>
+                                <div class="date w20">2020-Nov-11</div>
+                                <div class="author w15">Thomas Smith</div>
+                                <div class="genre w15">Genre</div>
+                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
+                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
+                            </article>
+                            <article class="d-flex justify-content-between align-items-center">
+                                <div class="id w5">2</div>
+                                <div class="name w30">Lorem Ipsum</div>
+                                <div class="date w20">2020-Nov-11</div>
+                                <div class="author w15">Thomas Smith</div>
+                                <div class="genre w15">Genre</div>
+                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
+                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
+                            </article>
+                            <article class="d-flex justify-content-between align-items-center">
+                                <div class="id w5">2</div>
+                                <div class="name w30">Lorem Ipsum</div>
+                                <div class="date w20">2020-Nov-11</div>
+                                <div class="author w15">Thomas Smith</div>
+                                <div class="genre w15">Genre</div>
+                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
+                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">This is a dummy text B</div>
+                    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">This is a dummy text C</div>
+                </div>
             </div>
         </div>
     </div>
@@ -79,6 +112,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
