added database functionality

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -57,10 +57,10 @@
             <div class="tab-header">
                 <ul class="nav nav-pills mb-3 pills" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Articles</a>
+                        <a class="nav-link active" id="pills-articles-tab" data-toggle="pill" href="#pills-articles" role="tab" aria-controls="pills-articles" aria-selected="true">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Slider</a>
+                        <a class="nav-link" id="pills-slider-tab" data-toggle="pill" href="#pills-slider" role="tab" aria-controls="pills-slider" aria-selected="false">Slider</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contacts</a>
@@ -69,49 +69,63 @@
             </div>
             <div class="tab-body">
                 <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                        <button class="btn btn-primary">Add Post</button>
+                    <div class="tab-pane fade show active" id="pills-articles" role="tabpanel" aria-labelledby="pills-articles-tab">
+                        <button class="btn btn-primary create-post-btn">Add Post</button>
                         <div class="articles">
-                            <article class="d-flex justify-content-between align-items-center">
-                                <div class="id w5">1</div>
-                                <div class="name w30">Lorem Ipsum</div>
-                                <div class="date w20">2020-Nov-11</div>
-                                <div class="author w15">Thomas Smith</div>
-                                <div class="genre w15">Genre</div>
-                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
-                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
-                            </article>
-                            <article class="d-flex justify-content-between align-items-center">
-                                <div class="id w5">2</div>
-                                <div class="name w30">Lorem Ipsum</div>
-                                <div class="date w20">2020-Nov-11</div>
-                                <div class="author w15">Thomas Smith</div>
-                                <div class="genre w15">Genre</div>
-                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
-                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
-                            </article>
-                            <article class="d-flex justify-content-between align-items-center">
-                                <div class="id w5">2</div>
-                                <div class="name w30">Lorem Ipsum</div>
-                                <div class="date w20">2020-Nov-11</div>
-                                <div class="author w15">Thomas Smith</div>
-                                <div class="genre w15">Genre</div>
-                                <div class="edit w10"><button class="btn btn-link">Edit</button></div>
-                                <div class="remove w5"><button class="btn btn-link" >X</button></div>
-                            </article>
+
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">This is a dummy text B</div>
+                    <div class="tab-pane fade" id="pills-slider" role="tabpanel" aria-labelledby="pills-slider-tab">This is a dummy text B</div>
                     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">This is a dummy text C</div>
+                    <div class="tab-pane fade " id="pills-create-post" role="tabpanel" aria-labelledby="pills-create-post-tab">
+                        <h2>Create Post</h2>
+                        <form class="create-post-form">
+                            <div class="form-group">
+                                <label for="create-title">Title</label>
+                                <input type="text" class="form-control" id="create-title" placeholder="Enter title">
+                                <span class="title">Please enter post title</span>
+                            </div>
+                            <div class="form-group">
+                                <label for="author">Author</label>
+                                <input type="text" class="form-control" id="author" placeholder="Enter Author name">
+                                <span class="authorname">Please enter author name</span>
+                            </div>
+                            <div class="form-group">
+                                <label for="genre">Genre</label>
+                                <select name="genre" id="genre" class="form-control">
+                                    <option value="culture">Culture</option>
+                                    <option value="events">Events</option>
+                                    <option value="food">Foods</option>
+                                    <option value="travel">Travelling</option>
+                                    <option value="fashion">Fashion</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="create-image-url">Image</label>
+                                <input type="text" class="form-control" id="create-image-url" placeholder="URL">
+                                <p>Or</p>
+                                <input type="file" class="form-control-file form-control" id="create-image-file">
+                            </div>
+                            <div class="form-group">
+                                <label for="create-text">Text</label>
+                                <textarea id="create-text" rows="5" class="form-control"></textarea>
+                                <span class="text">Please enter text</span>
+                            </div>
+                            <button class="btn btn-primary" type="submit">Create Post</button>
+
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </main>
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="../js/main.js"></script>
+<script src="/js/posts.js"></script>
+<script src="js/create-post.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
