--- a/public/index.html
+++ b/public/index.html
@@ -96,107 +96,9 @@
 <main class="page-main">
     <div class="container wrapper">
     <div class="row row-articles">
-        <div class="col-12 col-md-6 ">
-            <article>
-                <div class="article-left">
-                    <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
-                </div>
-                <div class="article-right">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p class="meta">
-                        <span class="date">June 8 2019</span>
-                        <span class="author">by Thomas Smith</span>
-                        <span class="category">Culture</span>
-                    </p>
-                    <p class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
-                    </p>
-                    <p class="additional">
-                        <span class="views"><i class="fas fa-eye"></i> 266</span>
-                        <span class="comments"><i class="fas fa-comments"></i> 3</span>
-                        <button class="btn btn-primary btn-details">Details</button>
-                    </p>
 
-                </div>
-            </article>
-        </div>
-        <div class="col-12 col-md-6">
-            <article>
-                <div class="article-left">
-                    <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
-                </div>
-                <div class="article-right">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p class="meta">
-                        <span class="date">June 8 2019</span>
-                        <span class="author">by Thomas Smith</span>
-                        <span class="category">Culture</span>
-                    </p>
-                    <p class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
-                    </p>
-                    <p class="additional">
-                        <span class="views"><i class="fas fa-eye"></i> 266</span>
-                        <span class="comments"><i class="fas fa-comments"></i> 3</span>
-                        <button class="btn btn-primary btn-details">Details</button>
-                    </p>
-
-                </div>
-            </article>
-        </div>
 
     </div>
-        <div class="row row-articles">
-            <div class="col-12 col-md-6 ">
-                <article>
-                    <div class="article-left">
-                        <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
-                    </div>
-                    <div class="article-right">
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                        <p class="meta">
-                            <span class="date">June 8 2019</span>
-                            <span class="author">by Thomas Smith</span>
-                            <span class="category">Culture</span>
-                        </p>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
-                        </p>
-                        <p class="additional">
-                            <span class="views"><i class="fas fa-eye"></i> 266</span>
-                            <span class="comments"><i class="fas fa-comments"></i> 3</span>
-                            <button class="btn btn-primary btn-details">Details</button>
-                        </p>
-
-                    </div>
-                </article>
-            </div>
-            <div class="col-12 col-md-6">
-                <article>
-                    <div class="article-left">
-                        <img src="https://www.basicknowledge101.com/photos/2016/culture-1.jpg" alt="Culture">
-                    </div>
-                    <div class="article-right">
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                        <p class="meta">
-                            <span class="date">June 8 2019</span>
-                            <span class="author">by Thomas Smith</span>
-                            <span class="category">Culture</span>
-                        </p>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ducimus eaque fuga magni nam praesentium ratione rem repellendus similique. Deleniti fuga hic labore laboriosam magni nemo, quia repellendus reprehenderit veniam?
-                        </p>
-                        <p class="additional">
-                            <span class="views"><i class="fas fa-eye"></i> 266</span>
-                            <span class="comments"><i class="fas fa-comments"></i> 3</span>
-                            <button class="btn btn-primary btn-details">Details</button>
-                        </p>
-
-                    </div>
-                </article>
-            </div>
-
-        </div>
     </div>
 </main>
 
@@ -219,5 +121,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
+<script src="js/posts.js"></script>
 </body>
 </html>
