--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -113,7 +113,48 @@
                                 <span class="text">Please enter text</span>
                             </div>
                             <button class="btn btn-primary" type="submit">Create Post</button>
+                        </form>
+                    </div>
+                    <!-- Update post -->
+                    <div class="tab-pane fade " id="pills-update-post" role="tabpanel" aria-labelledby="pills-update-post-tab">
+                        <h2>Update Post</h2>
+                        <form class="update-post-form">
+                            <div class="form-group">
+                                <label for="update-title">Title</label>
+                                <input type="text" class="form-control" id="update-title" placeholder="Enter title">
+                                <span class="update-title">Please enter post title</span>
+                            </div>
+                            <div class="form-group">
+                                <label for="update-author">Author</label>
+                                <input type="text" class="form-control" id="update-author" placeholder="Enter Author name">
+                                <span class="update-authorname">Please enter author name</span>
+                            </div>
+                            <div class="form-group">
+                                <label for="update-genre">Genre</label>
+                                <select name="genre" id="update-genre" class="form-control">
+                                    <option value="culture">Culture</option>
+                                    <option value="events">Events</option>
+                                    <option value="food">Foods</option>
+                                    <option value="travel">Travelling</option>
+                                    <option value="fashion">Fashion</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="update-image-url">Image</label>
+                                <input type="text" class="form-control" id="update-image-url" placeholder="URL">
+                                <p>Or</p>
+                                <input type="file" class="form-control-file form-control" id="update-image-file">
+                            </div>
+                            <div class="form-group image">
 
+                            </div>
+                            <div class="form-group">
+                                <label for="update-text">Text</label>
+                                <textarea id="update-text" rows="5" class="form-control"></textarea>
+                                <span class="update-text">Please enter text</span>
+                            </div>
+                            <button class="btn btn-primary" type="submit">Update Post</button>
                         </form>
                     </div>
                 </div>
@@ -126,6 +167,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/js/posts.js"></script>
 <script src="js/create-post.js"></script>
+<script src="js/delete-post.js"></script>
+<script src="js/update-post.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
